# Rtrend-fluH

./: .gitignore  .gitmodules  README.md  activate_env.sh  apagar.py  check_forecast_file.py  daily_run_forecast_states.py  fetch_cdc_truth_file.py  flusight_forecast.py  generic_script_template.py  get_truth.R  main_mcmc_rt  parsel_playground.py  parsel_preprocess.py  parsel_train.py  post_forecast_procedures.py  pre_forecast.py  pre_forecast_procedures.py  pyproject.toml  run_forecast_states.py  save_env_snapshot.sh  setup.py  simple_sir_tester.py  snapshot_jupyter_notebooks.py
2022-2023_scripts/: calc_season_stats.py  check_forecast_file.py  pre_forecast.py
2023-2024_scripts/: flusight_forecast.py
aux_data/: locations.csv
docs/: parameter_guide.md  setup_guide.md  submission_guide.md  usage_guide.md
forecast_out/: 2022-11-07-CEPH-Rtrend_fluH.csv  2023-01-23-CEPH-Rtrend_fluH.csv  2023-05-29-CEPH-Rtrend_fluH.csv  readme.md
hosp_data/: readme.md
inputs/: flusight_params.yaml  parsel_experimental_01.yaml  parsel_main.yaml  quicktest.yaml
population_data/: locations.csv  readme.md
py_modules/: cdc_params.py  data_io.py  forecast_structs.py  synthesis.py  visualization.py
rt_mcmc/: compile_mcmc_rt.sh
rtrend_interface/: flusight_tools.py  forecast_operators.py  parsel_utils.py  truth_data_structs.py
tmp_figs/: readme.md
utils/: bayesian_renewal.py  fetch_data_utils.py  flu_misc_utils.py  flusight_tools.py  forecast_operators_experimental.py  forecast_operators_flusight_2023.py  forecast_operators_flusight_2024.py  forecast_operators_flusight_2025.py  (+5 more)
(+13 files in other folders)
