[project]
name = "rtrend-fluh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rtrend-forecast",
]

[tool.uv.sources]
rtrend-forecast = { path = "../rtrend-forecast", editable = true }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
